session kinda weorking, need to get rid of poages controling home, and move it to the post controller

--- a/wiki/assets/css/bootstrap/css/bootstrap.css
+++ b/wiki/assets/css/bootstrap/css/bootstrap.css
@@ -4719,7 +4719,7 @@ tbody.collapse.show {
   color: #6c757d;
 }
 
-.pagination {
+.pagination.justify-content-center.mb-4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
